--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>nusim</name>
-  <version>0.0.0</version>
-  <description>The nusim package</description>
+  <version>0.0.1</version>
+  <description>
+  nusim is a simulator and visualizer that initializes the robot environment, updates the state of the world,
+  and processes services/subscribers to get commands for the next time step. 
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="devbhura@todo.todo">devbhura</maintainer>
+  <maintainer email="deveshbhura2023@u.northwestern.edu">devbhura</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
+  <license>APLv2</license>
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
@@ -49,6 +51,14 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roscpp</depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>tf2</build_depend>  
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>message_generation</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
