--- a/nuturtle_description/package.xml
+++ b/nuturtle_description/package.xml
@@ -56,6 +56,7 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
