--- a/nuturtle_description/config/diff_params.yaml
+++ b/nuturtle_description/config/diff_params.yaml
@@ -1,3 +1,7 @@
 # Parameters for turtlebot3
 wheel_radius: 0.033
 track_width: 0.160
+collision_radius: 0.11
+motor_cmd_to_radsec: 0.024
+motor_cmd_max: 265
+encoder_ticks_to_rad: 4096
