--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -1,45 +1,149 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.0.2)
 project(turtlelib)
 
+# enable C++ 17
+#target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17) 
 
+# warnings are your friend!
+#target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra)
 
-# create the turtlelib library 
-add_library(turtlelib 
-src/rigid2d.cpp
-src/frame_main.cpp
+## Compile as C++11, supported in ROS Kinetic and newer
+# add_compile_options(-std=c++11)
+
+## Find catkin macros and libraries
+## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
+## is used, also find other catkin packages
+find_package(catkin 
+REQUIRED COMPONENTS
+roscpp
+catch_ros
+)
+
+## System dependencies are found with CMake's conventions
+# find_package(Boost REQUIRED COMPONENTS system)
+
+###################################
+## catkin specific configuration ##
+###################################
+## The catkin_package macro generates cmake config files for your package
+## Declare things to be passed to dependent projects
+## INCLUDE_DIRS: uncomment this if your package contains header files
+## LIBRARIES: libraries you create in this project that dependent projects also need
+## CATKIN_DEPENDS: catkin_packages dependent projects also need
+## DEPENDS: system dependencies of this project that dependent projects also need
+catkin_package(
+ INCLUDE_DIRS include
+ LIBRARIES ${PROJECT_NAME}
+ CATKIN_DEPENDS 
+ roscpp
+#  DEPENDS system_lib
+)
+
+###########
+## Build ##
+###########
+
+## Specify additional locations of header files
+## Your package locations should be listed before other locations
+include_directories(
+ include
+ ${catkin_INCLUDE_DIRS}
+)
+
+## Declare a C++ library
+add_library(${PROJECT_NAME}
+   src/rigid2d.cpp
 )
 
 
-# The add_library function just added turtlelib as a "target"
-# A "target" is a name that CMake uses to refer to some type of output
-# In this case it is a library but it could also be an executable or some other items
 
-# Public include directories can be used by other targets that link against turtlelib
-# By adding include/ to the include path, this means that files in e.g., include/turtlelib
-# can be included with #include"turtlelib/file.hpp"
-target_include_directories(turtlelib PUBLIC include/turtlelib)
 
-# enable C++ 17
-target_compile_features(turtlelib PUBLIC cxx_std_17) 
+add_executable(frame_main src/frame_main.cpp)
+target_link_libraries(frame_main ${PROJECT_NAME} ${catkin_LIBRARIES})
 
-# warnings are your friend!
-target_compile_options(turtlelib PUBLIC -Wall -Wextra)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
 
-# create the executable target  and link it with the rigid2d library
-# It is also possible specify multiple cpp files and they will be linked
-# into a single executable (as long as exactly one of these files includes a main() function).
-# However, by creating a library (as we are doing here) the library files
-# can be compiled once and used
-add_executable(frame_main src/frame_main.cpp src/rigid2d.cpp)
-target_link_libraries(frame_main turtlelib)
+## Add cmake target dependencies of the library
+## as an example, code may need to be generated before libraries
+## either from message generation or dynamic reconfigure
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-# Use the cmake testing functionality. A test is just an executable.
-enable_testing()
-add_executable(turtlelib_test tests/tests.cpp)
-target_link_libraries(turtlelib_test turtlelib)
-add_test(NAME Test_of_Turtlelib COMMAND turtlelib_test)
+## Declare a C++ executable
+## With catkin_make all packages are built within a single CMake context
+## The recommended prefix ensures that target names across packages don't collide
+#add_executable(${PROJECT_NAME} src/frame_main.cpp)
 
-# CMake also has the ability to generate doxygen documentation
-find_package(Doxygen)
-set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md) # Use the readme in your doxygen docs
-doxygen_add_docs(doxygen include/ src/ README.md ALL)
+
+## Rename C++ executable without prefix
+## The above recommended prefix causes long target names, the following renames the
+## target back to the shorter version for ease of user use
+## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
+# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+# target_link_libraries(${PROJECT_NAME}
+#   ${catkin_LIBRARIES}
+# )
+
+#############
+## Install ##
+#############
+
+# all install targets should use catkin DESTINATION variables
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+
+## Mark executable scripts (Python etc.) for installation
+## in contrast to setup.py, you can choose the destination
+# catkin_install_python(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
+
+## Mark executables for installation
+## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
+install(TARGETS frame_main
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+## Mark libraries for installation
+## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
+ install(TARGETS ${PROJECT_NAME}
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+ )
+
+## Mark cpp header files for installation
+ install(DIRECTORY include/${PROJECT_NAME}/
+   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+   FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+   PATTERN ".svn" EXCLUDE
+ )
+
+## Mark other files for installation (e.g. launch and bag files, etc.)
+install(
+    DIRECTORY include/${PROJECT_NAME}
+   # rigid2d.hpp
+   # myfile2
+   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+ )
+
+#############
+## Testing ##
+#############
+if(CATKIN_ENABLE_TESTING)
+
+    catch_add_test(my_test
+    tests/tests.cpp
+    src/rigid2d.cpp
+    )
+
+    target_link_libraries(my_test
+    ${catkin_LIBRARIES}
+    ${PROJECT_NAME}
+    )
+endif()
