--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -54,11 +54,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>nuturtlebot_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nuturtlebot_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
-
+  <build_export_depend>tf2_ros</build_export_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
