--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -59,6 +59,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>nuturtlebot_msgs</build_depend>
+  <build_export_depend>nuturtlebot_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
