--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -69,6 +69,7 @@
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>nuturtle_description </exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
