--- a/nusim/config/config_sim.yaml
+++ b/nusim/config/config_sim.yaml
@@ -4,3 +4,8 @@ slip_max: 1.5
 slip_min: 1.0
 max_range: 2.0
 basic_sensor_variance: 0.01
+scan_angle_min: 0.0
+scan_angle_max: 6.28319
+scan_angle_increment: 0.1
+scan_range_min: 0.12
+scan_range_max: 4
