--- a/nuslam/package.xml
+++ b/nuslam/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="devbhura@todo.todo">devbhura</maintainer>
+  <maintainer email="deveshbhura2023@u.northwestern.edu">devbhura</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -49,7 +49,23 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend> std_msgs </build_depend>
+  <build_depend> nav_msgs </build_depend>
+  <build_depend> roscpp </build_depend>
+  <build_depend> geometry_msgs </build_depend>
+  <build_depend> tf2 </build_depend>
+  <build_depend> message_runtime </build_depend>
+  <build_depend> tf2_ros </build_depend>
+  <build_depend> sensor_msgs </build_depend>
 
+  <build_export_depend> std_msgs </build_export_depend>
+  <build_export_depend> nav_msgs </build_export_depend>
+  <build_export_depend> roscpp </build_export_depend>
+  <build_export_depend> geometry_msgs </build_export_depend>
+  <build_export_depend> tf2 </build_export_depend>
+  <build_export_depend> message_runtime </build_export_depend>
+  <build_export_depend> tf2_ros </build_export_depend>
+  <build_export_depend> sensor_msgs </build_export_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
