--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -53,6 +53,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend> 
   <build_depend>std_srvs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf2</build_depend>  
