--- a/nuslam/package.xml
+++ b/nuslam/package.xml
@@ -57,6 +57,7 @@
   <build_depend> message_runtime </build_depend>
   <build_depend> tf2_ros </build_depend>
   <build_depend> sensor_msgs </build_depend>
+  <build_depend> catch_ros </build_depend> 
 
   <build_export_depend> std_msgs </build_export_depend>
   <build_export_depend> nav_msgs </build_export_depend>
