--- a/nuslam/CMakeLists.txt
+++ b/nuslam/CMakeLists.txt
@@ -210,6 +210,9 @@ target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra)
 install(TARGETS slam
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+install(TARGETS landmarks
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark libraries for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
